# aes256gen

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh  cliff.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
