[package]
name = "aes256gen"
description = "AES256 encrypt codes generator for Anytone DMR radio"
authors = ["Alexander Egorov <egoroff@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
hex = "0.4.3"
csv = "1.3.1"
clap = { version = "4.5.27", features = ["std", "color", "cargo"] }
serde = { version = "1.0.217", features = ["derive"] }
color-eyre = "0.6.3"

[profile.release]
lto = true
strip = true
panic = 'abort'

[profile.darwin-release]
inherits = "release"
strip = false
