[package]
name = "aes256gen"
description = "AES256 encrypt codes generator for Anytone DMR radio"
authors = ["Alexander Egorov <egoroff@gmail.com>"]
version = "0.1.1"
edition = "2024"

[dependencies]
rand = "0.9.0"
hex = "0.4.3"
csv = "1.3.1"
clap = { version = "4.5.31", features = ["std", "color", "cargo"] }
serde = { version = "1.0.218", features = ["derive"] }
color-eyre = "0.6.3"
bugreport = "0.5.1"

[profile.release]
lto = true
strip = true
panic = 'abort'

[profile.darwin-release]
inherits = "release"
strip = false
